# onward-journey-aws

./: .gitignore  .tool-versions  README.md
.github/workflows/: file-formatting.yml  frontend-checks.yml
app/: .gitignore  README.md  agents.py  chat_server.py  conftest.py  crm_tool.py  data.py  genesys_tool.py  helpers.py  loaders.py  main.py  orchestrator.py  plotting.py  prompt_guidance.py  pyproject.toml  rds_seeder.py  rds_tool.py  server.py  test.py
app/lambdas/crm_tool/: handler.py
app/lambdas/kb_sync/check_kb_meta/: handler.py
app/lambdas/kb_sync/check_meta/: handler.py
app/lambdas/kb_sync/check_sync_meta/: handler.py
app/lambdas/kb_sync/fetch_articles/: handler.py
app/lambdas/kb_sync/update_sync_meta/: handler.py
app/lambdas/kb_sync/upsert/: handler.py
app/lambdas/orchestrator/: handler.py
app/lambdas/rds_init/: handler.py
app/lambdas/rds_kb_init/: handler.py
app/lambdas/rds_seeder/: handler.py
app/lambdas/rds_tool/: handler.py
app/prompts/: prompt_policy.md
app/shared/integrations/: base.py  factory.py  tooling.py
app/shared/integrations/providers/: genesys.py
app/shared/utils/: aws.py  config.py  db.py  genesys_parser.py
app/tests/: test_parser.py
app/tests/orchestrator/: mock_data.py  test_handler.py
archive/: helpers.py  main.py  plotting.py  tools.py
frontend/: .env.example  Makefile  README.md  eslint.config.js  jest.config.js  package-lock.json  package.json  svelte.config.js  tsconfig.jest.json
frontend/src/: app.html  app.scss
infrastructure/: .gitignore  .terraform.lock.hcl  README.md  agentcore.tf  build.tf  check_s3_gateway.sh  endpoints.tf  iam.tf  lambda.tf  outputs.tf  providers.tf  rds.tf  rds_seeder.py  rds_seeder.tf  secrets.tf  security_groups.tf  seed_config.yaml  variables.tf  vpc.tf  vpc_lookup.tf
infrastructure/environments/: .example.config
infrastructure/services/: .terraform.lock.hcl  agentcore.tf  alerting.tf  amplify.tf  build.tf  cognito.tf  endpoints.tf  eventbridge.tf  iam.tf  kb_config.yaml  kb_sync_lambdas.tf  kb_sync_workflow.asl.json  lambda.tf  locals.tf  network_data.tf  pipelines.yaml  providers.tf  rds.tf  rds_init.tf  rds_kb_init.tf  rds_seeder.tf  s3.tf  secrets.tf  security_groups.tf  seed_config.yaml  (+2 more)
mock_data/: interaction_memory.csv  mock_rag_data_v2.csv
tests/: README.md  template_test_event.json  test_integration.sh
(+29 files in other folders)
