[project]
name = "onward-journey"
version = "0.1.0"
description = "GOV.UK Onward Journey - AgentCore/Lambda Hybrid Orchestrator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-aws>=1.2.2",
    "langgraph>=0.2.60",
    "langchain-core>=0.3.33",
    "pg8000>=1.31.2",
    "langgraph-checkpoint-aws>=1.0.4",
]

[dependency-groups]
dev = [
    "boto3>=1.42.5",         # Pre-installed in Lambda, keep here for local IDE/Linting
]
