[project]
name = "onward-journey"
version = "0.1.0"
description = "GOV.UK Onward Journey - AgentCore/Lambda Hybrid Orchestrator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-aws>=1.2.2",
    "langgraph>=0.2.60",
    "langchain-core>=1.3.3",
    "pg8000>=1.31.2",
    "langgraph-checkpoint-aws>=1.0.4"
]

[tool.setuptools]
packages = ["shared", "lambdas"]

[dependency-groups]
dev = [
    "boto3>=1.42.5",         # Pre-installed in Lambda, keep here for local IDE/Linting
    "pytest>=7.0.0",
    "deepeval",
    "aiobotocore",
    "botocore"
]

[tool.pytest.ini_options]
filterwarnings = [
    # Silences the LangChain/Pydantic V1 compatibility warning on Python 3.14+
    "ignore:Core Pydantic V1 functionality isn't compatible with Python:UserWarning"
]
addopts = "--tb=short"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%H:%M:%S"
